--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
     <div class="newRow" id="addTopings">
         <div class="block1">
             <input id="add_item" placeholder="Type here to add toppings?"> 
-			
 			<button class="btn btn-success" onclick="add_top()">Add</button>
-			
-			<br><br>
             <button id="add_toppings" onclick="add_item()">Show Pizza</button>
         </div>
+		
         <div class="block2">
             <div id="display_addedmenu">
             </div>
@@ -49,6 +47,4 @@
     </div>
 
 
-</body>
-
-</html>
+</body></html>
